@@ -1,3 +1,8 @@
+2006-06-09  Yoshinori K. Okuji  <okuji@enbug.org>
+
+	* loader/i386/pc/linux.c (grub_rescue_cmd_initrd): Make sure that
+	ADDR_MAX does not exceed GRUB_LINUX_INITRD_MAX_ADDRESS.
+
 2006-06-07  Jeroen Dekkers  <jeroen@dekkers.cx>
 
 	* include/grub/types.h (grub_host_addr_t): Rename to
